--- a/client/client/src/App.css
+++ b/client/client/src/App.css
@@ -2,6 +2,7 @@ body {
   padding-left: 5%;
   padding-right: 5%; 
   background-image: url("./components/pawprintseamless.jpg"); 
+  
 }
 
  .header-name { 
@@ -28,6 +29,7 @@ h5 {
 }
 
 
+
 .App {
   text-align: center;
   }
@@ -35,6 +37,15 @@ h5 {
 .shelter-name {
   color: blue;
 }
+
+.clinic-name {
+  color: blue;
+}
+
+.park-name {
+  color: blue;
+}
+
 .button-success {
   background-color: darkorange;
   color: white;
